test/ll_parser_standard_test.test
BRACKETED EXPRESSION:
    ID 10 is {|x + y|}
BRACKETED EXPRESSION:
    ID 11 is {|x + y|}
ERROR: in line ##: extra stuff at end of line; line ignored:
        z = x * y
              ^^^
ERROR: in line ##: extra stuff at end of line; line ignored:
        w = u - v
              ^^^
BRACKETED EXPRESSION:
    ID 21 is {|x * y|}
BRACKETED EXPRESSION:
    ID 22 is {|u - v|}
BRACKETED EXPRESSION:
    ID 23 is {"": z = {|x * y|}, w = {|u - v|}|x + y|}
BRACKETED EXPRESSION:
    ID 30 is
        {|this is an indented paragraph
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator =
               "::"|{p|{s|with a line and a second line|s}|p}|}|}
BRACKETED EXPRESSION:
    ID 35 is foo
BRACKETED EXPRESSION:
    ID 36 is "fum"
BRACKETED EXPRESSION:
    This is a line with an indented paragraph:
        First line of indented paragraph "."
        Second line of indented paragraph "."
BRACKETED EXPRESSION:
    "::::"
BRACKETED EXPRESSION:
    ID 40 is
        {|This is a code line ending in
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator = ":"|
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|An indented paragragraph ";" line
                    one "."|}
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|Line two "."|}|}|}
WARNING: in line ##: name element "." is a mark or separator and
         therefore should be quoted:
          f = ;, . = 99, g = [< m n >] p, h = [< [< m n >] p >]
                 ^
BRACKETED EXPRESSION:
    ID 50 is
        {x: h = [< [< m n >] p >], "," = ":", d = ppp, e =
            [< ppp qqq >], a = "quoted string", "." = 99, f = ";",
            98.21 = hi, b = 53.91, g = [< [< m n >] p >], c =
            [< yyy 53.91 >]|"quoted string" 53.91 99 ";" foo|x}
BRACKETED EXPRESSION:
    ID 60 is {"": a = @@ = b, d = @@ = c}
BRACKETED EXPRESSION:
    ID 61 is {"": a = @@ = b}
